--- a/app/src/main/resources/templates/quarto/listagens/mapaQuartos.html
+++ b/app/src/main/resources/templates/quarto/listagens/mapaQuartos.html
@@ -31,8 +31,8 @@
                             <div class="box box-shadow">
                                 <div class="column">
                                     <a  class="centralizar" th:href="@{/quarto/umQuarto/{idQuarto}(idQuarto=${quarto.id})}">
-                                        <button type="reset" class="button is-success red " th:if="${quarto.leitosDisponiveis() <= 0}" th:text="${quarto.nomeQuarto}"></button>
-                                        <button type="submit" class="button is-success"  th:if="${quarto.leitosDisponiveis() > 0} " th:text="${quarto.nomeQuarto}"></button>
+                                        <button type="reset" class="button is-danger borda-arredondada" th:if="${quarto.leitosDisponiveis() <= 0}" th:text="${quarto.nomeQuarto}"></button>
+                                        <button type="submit" class="button verde-viavida borda-arredondada"  th:if="${quarto.leitosDisponiveis() > 0} " th:text="${quarto.nomeQuarto}"></button>
                                     </a>
                                     <div class="centralizar">
                                         <strong>Tipo:</strong>
