--- a/app/src/main/resources/templates/quarto/listagens/listaQuartos.html
+++ b/app/src/main/resources/templates/quarto/listagens/listaQuartos.html
@@ -32,8 +32,8 @@
                             <div class="box box-shadow">
                                 <div class="column">
                                     <a  class="centralizar" th:href="@{/quarto/{idSolicitacao}/quarto/{idQuarto}(idSolicitacao=${solicitacao.id}, idQuarto=${quarto.id})}">
-                                        <button type="reset" class="button is-success red " th:if="${quarto.leitosDisponiveis() <= 0 || numeroHospedes > quarto.leitosDisponiveis()}" th:text="${quarto.nomeQuarto}"></button>
-                                        <button type="submit" class="button is-success"  th:if="${quarto.leitosDisponiveis() > 0 && numeroHospedes <= quarto.leitosDisponiveis()} " th:text="${quarto.nomeQuarto}"></button>
+                                        <button type="reset" class="button is-danger borda-arredondada" th:if="${quarto.leitosDisponiveis() <= 0 || numeroHospedes > quarto.leitosDisponiveis()}" th:text="${quarto.nomeQuarto}"></button>
+                                        <button type="submit" class="button verde-viavida borda-arredondada"  th:if="${quarto.leitosDisponiveis() > 0 && numeroHospedes <= quarto.leitosDisponiveis()} " th:text="${quarto.nomeQuarto}"></button>
                                     </a>
                                     <div class="centralizar">
                                         <strong>Tipo:</strong>
