--- a/app/src/main/resources/templates/bemvindo/bemvindo.html
+++ b/app/src/main/resources/templates/bemvindo/bemvindo.html
@@ -39,7 +39,7 @@
                                         <div class="board-item-content"><a th:href="@{/solicitacao/listagemHospede}">Gerenciar Hospedes</a></div>
                                     </div>
                                     <div class="board-item">
-                                        <div class="board-item-content"><a th:href="@{/quarto/mapaQuartos}">Mapa de Quartos</a></div>
+                                        <div class="board-item-content"><a th:href="@{/quarto/quartos}">Mapa de Quartos</a></div>
                                     </div>
                                     <div class="board-item">
                                         <div class="board-item-content"><a th:href="@{/listacheckincheckout}">Lista Check-in/Check-out</a></div>
