--- a/app/src/main/resources/templates/quarto/listagens/mapaQuartos.html
+++ b/app/src/main/resources/templates/quarto/listagens/mapaQuartos.html
@@ -16,7 +16,7 @@
                 <nav class="breadcrumb" aria-label="breadcrumbs">
                     <ul>
                         <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Início</a></li>
-                        <li><a th:href="@{'/quarto/mapaQuartos'}">Mapa de Quartos</a></li>
+                        <li><a th:href="@{'/quarto/quartos'}">Mapa de Quartos</a></li>
 
                     </ul>
                 </nav>
@@ -30,7 +30,7 @@
                         <div class="column is-3">
                             <div class="box box-shadow">
                                 <div class="column">
-                                    <a  class="centralizar" th:href="@{/quarto/umQuarto/{idQuarto}(idQuarto=${quarto.id})}">
+                                    <a  class="centralizar" th:href="@{/quarto/quartos/{idQuarto}(idQuarto=${quarto.id})}">
                                         <button type="reset" class="button is-danger borda-arredondada" th:if="${quarto.leitosDisponiveis() <= 0}" th:text="${quarto.nomeQuarto}"></button>
                                         <button type="submit" class="button verde-viavida borda-arredondada"  th:if="${quarto.leitosDisponiveis() > 0} " th:text="${quarto.nomeQuarto}"></button>
                                     </a>
