<@ingridDuarte> Padroniza layout registrar

--- a/app/src/main/resources/templates/registrarUsuario/usuarioError.html
+++ b/app/src/main/resources/templates/registrarUsuario/usuarioError.html
@@ -14,11 +14,11 @@
                     <span>Já existe um registro com este nome de usuário. Por favor, insira um nome de usuário válido. </span>
                 </div>
                 <div>
-                    <button class="button verde-viavida borda-arredondada" >
-                        <a th:href="@{'/registrar'}">
+                    <a th:href="@{'/registrar'}">
+                        <button class="button verde-viavida cor-texto-logout borda-arredondada" >
                             Registrar novamente
-                        </a>
-                    </button>
+                        </button>
+                    </a>
                 </div>
             </nav>
         </div>
