<@ingridDuarte, @cassia11> refatora rotas

--- a/app/src/main/resources/templates/quarto/listagens/listaQuartos.html
+++ b/app/src/main/resources/templates/quarto/listagens/listaQuartos.html
@@ -17,7 +17,7 @@
                     <ul>
                         <li><a th:href="@{'/bemvindo'}" class="has-text-black" href="#" aria-current="page">Início</a></li>
                         <li><a th:href="@{'/solicitacao/casa/lista'}" class="has-text-black" href="#" aria-current="page">Lista de Solicitações</a></li>
-                        <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/listaQuartos'}">Lista de Quartos</a></li>
+                        <li><a th:href="@{'/quarto/' + ${solicitacao.id} + '/quartos'}">Lista de Quartos</a></li>
                     </ul>
                 </nav>
             </div>
