--- a/app/src/main/resources/templates/quarto/umQuarto.html
+++ b/app/src/main/resources/templates/quarto/umQuarto.html
@@ -17,7 +17,7 @@
                     <ul>
                         <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Início</a></li>
                         <li><a th:href="@{'/quarto/quartos'}" class="has-text-black" href="#" aria-current="page">Mapa de Quartos</a></li>
-                        <li><a th:href="@{'/quarto/quartos/' + ${quarto.id}}">Dados do Quarto</a></li>
+                        <li><a th:href="@{'/quarto/quarto/' + ${quarto.id}}">Dados do Quarto</a></li>
                     </ul>
                 </nav>
             </div>
