--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -44,7 +44,7 @@
                                         </a>
                                     </div>
                                     <div class="control">
-                                        <a th:href="@{'/quarto/' + ${solicitacao.id} + '/listaQuartos'}">
+                                        <a th:href="@{'/quarto/' + ${solicitacao.id} + '/quartos'}">
                                             <button type="submit" class="button verde-viavida borda-arredondada">
                                                 Selecionar quarto
                                             </button>
