--- a/app/src/main/resources/templates/quarto/quarto.html
+++ b/app/src/main/resources/templates/quarto/quarto.html
@@ -23,23 +23,29 @@
                 </nav>
             </div>
             <div th:include="@{./partes/cabecalhoDadosSolicitante}"/>
-
             <div class="columns is-multiline is-lefty">
-                <span class="tag is-success is-medium" th:text="${quarto.nomeQuarto}"></span>
+                <span class="button verde-viavida borda-arredondada" th:text="${quarto.nomeQuarto}"></span>
             </div>
-
-            <div class="is-mobile is-centered">
-                <h2 class="title is-5 is-half centralizar espacamento-titulo">Ocupado por:</h2>
-                <th:block th:each="ocupante : ${ocupantes}">
-                    <div class="centralizar">
-                        <p>
-                            <label>
-                                <strong>Nome:</strong>
-                            </label>
-                            <label th:text="${ocupante.nome}"></label>
-                        </p>
+            <div class="espacamento">
+                <div class="is-mobile is-centered">
+                    <h2 class="title is-5 is-half centralizar espacamento-titulo">Ocupantes do quarto</h2>
+                    <div class="columns">
+                        <table class="table is-striped">
+                            <thead>
+                            <tr>
+                                <th>Nome</th>
+                            </tr>
+                            </thead>
+                            <th:block th:each="ocupante : ${ocupantes}">
+                            <tr>
+                                <td>
+                                    <label th:text="${ocupante.nome}"></label>
+                                </td>
+                            </tr>
+                            </th:block>
+                        </table>
                     </div>
-                </th:block>
+                </div>
             </div>
             <div class="is-centered is-half centralizar espacamento" th:if="${quarto.leitosDisponiveis() > 0}">
                 <form th:action="@{/quarto/aceitar}" method="POST">
