<@cassia11, @ingridDuarte> Remove pasta hospebem

--- a/app/src/main/resources/templates/usuario/listagens/listaUsuarios.html
+++ b/app/src/main/resources/templates/usuario/listagens/listaUsuarios.html
@@ -16,7 +16,7 @@
                 <nav class="breadcrumb" aria-label="breadcrumbs">
                     <ul>
                         <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Início</a></li>
-                        <li><a th:href="@{'/usuario/listaUsuarios'}" class="has-text-black" href="#" aria-current="page">Lista de Usuários</a></li>
+                        <li><a th:href="@{'/usuario/listaUsuarios'}" aria-current="page">Lista de Usuários</a></li>
                     </ul>
                 </nav>
             </div>
