Arruma nome de assistente social

--- a/app/src/main/resources/templates/usuario/listagens/listaUsuarios.html
+++ b/app/src/main/resources/templates/usuario/listagens/listaUsuarios.html
@@ -35,7 +35,7 @@
                                     </div>
                                     <hr>
                                     <div class="centralizar">
-                                        <label id="tipoCargo" th:text="${usuario.cargo.toString()} == 'ADMINISTRADOR' ? 'Administrador' : 'Assitente Social'"></label>
+                                        <label id="tipoCargo" th:text="${usuario.cargo.toString()} == 'ADMINISTRADOR' ? 'Administrador' : 'Assistente Social'"></label>
                                     </div>
                                     <hr>
                                     <div class="centralizar">
