--- a/app/src/main/resources/templates/registrarUsuario/registrar.html
+++ b/app/src/main/resources/templates/registrarUsuario/registrar.html
@@ -1,16 +1,12 @@
 <!DOCTYPE html>
-<html th:replace="~{layout :: layout(~{::title}, ~{::body})}" xmlns:th="http://www.thymeleaf.org"
-      xmlns:sec="http://www.w3.org/1999/xhtml">
+<html th:replace="~{layout :: layout(~{::title}, ~{::body})}" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title>HospeBem Registrar</title>
 </head>
 <body>
 <main>
-    <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ASSISTENTE_SOCIAL.getNome())">
-        Você não tem autorização para acessar essa página
-    </div>
-    <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
+
     <div class="container card-content valign center has-text-centered">
         <div class="section">
             <nav class="breadcrumb" aria-label="breadcrumbs">
@@ -81,7 +77,6 @@
             </div>
             <input class="button is-medium verde-viavida borda-arredondada" type="submit" value="Enviar">
         </form>
-    </div>
     </div>
 </main>
 </body>
