--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -103,7 +103,7 @@
                                 <div class="control">
                                     <span>Data do transplante:</span>
                                     <input id="dataTransplante" placeholder="Clique para selecionar uma data" autocomplete="off"
-                                           type="text" class="input input-fancy datepicker-futuro borda-arredondada" th:field="*{dataTransplante}"
+                                           type="text" class="input input-fancy datepicker borda-arredondada" th:field="*{dataTransplante}"
                                            onkeypress="return false;">
                                 </div>
                             </div>
