<@cassia>Retira link do nome

--- a/app/src/main/resources/templates/quarto/listagens/listaCheckinCheckout.html
+++ b/app/src/main/resources/templates/quarto/listagens/listaCheckinCheckout.html
@@ -28,9 +28,8 @@
                     <th:block th:each="solicitacao : ${solicitacoesHospedes}">
                         <div class="column is-4">
                             <div class="box">
-                                <a class="subtitle" th:href="@{'/quartos/' + ${solicitacao.id} + '/informacoes'}"
-                                   th:text="${solicitacao.nome}">
-                                </a>
+                                <div th:text="${solicitacao.nome}">
+                                </div>
                                 <hr>
                                 <ul>
                                     <th:block th:each="quarto: ${quartos}" th:if="${quarto.id == solicitacao.quarto.id}">
@@ -46,10 +45,10 @@
                                         <div class="control">
                                             <input placeholder="Selecione uma data" autocomplete="off"
                                                    type="text" class="data-checkout input input-fancy datepicker-retroativo"
-                                                   th:field="*{dataCheckout}"
-                                                   onkeypress="return false;">
+                                                   th:field="*{dataCheckout}" required oninvalid="setCustomValidity('Por favor, preencha a data')" />
                                         </div>
                                         <div class="control">
+
                                             <button type="submit" class="button header-color cor-texto-logout  borda-arredondada">Check-Out</button>
                                         </div>
                                     </div>
@@ -67,9 +66,8 @@
                     <th:block th:each="solicitacao : ${solicitacoesAceitas}">
                         <div class="column is-4">
                             <div class="box">
-                                <a class="subtitle" th:href="@{'/quartos/' + ${solicitacao.id} + '/informacoes'}"
-                                   th:text="${solicitacao.nome}">
-                                </a>
+                                <div th:text="${solicitacao.nome}">
+                                </div>
                                 <hr>
                                 <ul>
                                     <th:block th:each="quarto: ${quartos}" th:if="${quarto.id == solicitacao.quarto.id}">
@@ -85,11 +83,10 @@
                                         <div class="control">
                                             <input placeholder="Selecione uma data" autocomplete="off"
                                                    type="text" class="data-checkin input input-fancy datepicker-retroativo "
-                                                   th:field="*{dataCheckin}"
-                                                   onkeypress="return false;">
+                                                   th:field="*{dataCheckin}" required oninvalid="setCustomValidity('Por favor, preencha a data')"/>
                                         </div>
                                         <div class="control">
-                                            <button type="submit" class="button header-color cor-texto-logout  borda-arredondada">Check-In</button>
+                                            <button  type="submit" class="button header-color cor-texto-logout  borda-arredondada">Check-In</button>
                                         </div>
                                     </div>
                                 </form>
