--- a/app/src/main/resources/templates/quarto/quarto.html
+++ b/app/src/main/resources/templates/quarto/quarto.html
@@ -24,7 +24,7 @@
             </div>
             <div th:include="@{./partes/cabecalhoDadosSolicitante}"/>
             <div class="columns is-multiline is-lefty">
-                <span class="button verde-viavida borda-arredondada" th:text="${quarto.nomeQuarto}"></span>
+                <label class="button-quarto" th:text="${quarto.nomeQuarto}"/>
             </div>
             <div class="espacamento">
                 <div class="is-mobile is-centered">
