--- a/app/src/main/resources/templates/quarto/umQuarto.html
+++ b/app/src/main/resources/templates/quarto/umQuarto.html
@@ -22,7 +22,7 @@
                 </nav>
             </div>
             <div class="columns is-multiline is-lefty">
-                <span class="button verde-viavida borda-arredondada" th:text="${quarto.nomeQuarto}"></span>
+                <label class="button-quarto" th:text="${quarto.nomeQuarto}"/>
             </div>
             <div class="is-mobile is-centered">
                 <h2 class="title is-5 is-half centralizar espacamento-titulo">Ocupado por:</h2>
