--- a/app/src/main/resources/templates/quarto/listagens/listaCheckinCheckout.html
+++ b/app/src/main/resources/templates/quarto/listagens/listaCheckinCheckout.html
@@ -45,7 +45,7 @@
                                         <div class="control">
                                             <input placeholder="Selecione uma data" autocomplete="off"
                                                    type="text" class="data-checkout input input-fancy datepicker-retroativo"
-                                                   th:field="*{dataCheckout}" required oninvalid="setCustomValidity('Por favor, preencha a data')" />
+                                                   th:field="*{dataCheckout}" required/>
                                         </div>
                                         <div class="control">
 
@@ -83,7 +83,7 @@
                                         <div class="control">
                                             <input placeholder="Selecione uma data" autocomplete="off"
                                                    type="text" class="data-checkin input input-fancy datepicker-retroativo "
-                                                   th:field="*{dataCheckin}" required oninvalid="setCustomValidity('Por favor, preencha a data')"/>
+                                                   th:field="*{dataCheckin}" required/>
                                         </div>
                                         <div class="control">
                                             <button  type="submit" class="button header-color cor-texto-logout  borda-arredondada">Check-In</button>
