--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -66,7 +66,7 @@
                         <div class="field">
                             <div class="control">
                                 <label>
-                                    <input type="checkbox" value="sim" id="cadeirante" th:field="*{cadeirante}">
+                                    <input type="checkbox" value="sim" id="cadeirante" th:field="*{cadeirante}" onclick="pesoCadeirante()">
                                     <span>O hóspede é cadeirante</span>
                                 </label>
                             </div>
