--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -196,7 +196,7 @@
                             <span>UF:</span>
                             <div class="field">
                                 <div class="control">
-                                    <input class="input input-fancy borda-arredondada" th:field="*{endereco.uf}" type="text">
+                                    <input id="uf" class="input input-fancy borda-arredondada" th:field="*{endereco.uf}" type="text">
                                 </div>
                             </div>
                         </div>
