--- a/app/src/main/resources/templates/registrarUsuario/registrar.html
+++ b/app/src/main/resources/templates/registrarUsuario/registrar.html
@@ -7,76 +7,81 @@
 </head>
 <body>
 <main>
-    <div class="container card-content valign center has-text-centered">
-        <div class="section">
-            <nav class="breadcrumb" aria-label="breadcrumbs">
-                <ul>
-                    <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Início</a></li>
-                    <li><a th:href="@{'/registrar'}">Registrar</a></li>
-                </ul>
-            </nav>
+    <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ASSISTENTE_SOCIAL.getNome())">
+        Você não tem autorização para acessar essa página
+    </div>
+    <div sec:authorize="hasAuthority(T(com.thoughtworks.aceleradora.login.dominio.Cargo).ADMINISTRADOR.getNome())">
+        <div class="container card-content valign center has-text-centered">
+            <div class="section">
+                <nav class="breadcrumb" aria-label="breadcrumbs">
+                    <ul>
+                        <li><a th:href="@{'/bemvindo'}" class="has-text-black" aria-current="page">Início</a></li>
+                        <li><a th:href="@{'/registrar'}">Registrar</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <h1 class="title titulo-h1">Formulário de Registro do Hospebem</h1>
+            <form th:action="@{/registrar}" th:object="${formUsuario}" method="post" onsubmit="return validaRegistrar(event)" id="registraAss">
+                <div th:if="${#fields.hasAnyErrors()}">
+                    <p th:each="err : ${#fields.errors()}" th:text="${err}"></p>
+                </div>
+                <div class="columns has-text-left">
+                    <div class = "column is-half">
+                        <div class = "control input-radio margin-invisible" id="labelCargo">
+                            <label th:field="*{cargo}">Tipo:</label>
+                            <input class="input-radio" th:id="${cargo}" th:each="cargo : ${cargos}" type="radio" name="cargo" th:value="${cargo}" th:text="${cargo.nome}">
+                        </div>
+                    </div>
+                </div>
+                <div class="display-none div-escondida">
+                    <div class="columns has-text-left">
+                        <div class="column is-half">
+                            <div class="control">
+                                <label for="nomeAssistente">*Nome Completo:</label>
+                                <input class="input input-fancy borda-arredondada" th:field="*{nomeAssistente}" type="text" id="nomeAssistente">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="columns has-text-left">
+                        <div class="column is-half">
+                            <div class="control">
+                                <label for="emailDaAssistente" id="emailAssistente">*E-mail:</label>
+                                <input class="input input-fancy borda-arredondada" th:field="*{email}" type="text" id="emailDaAssistente">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="columns has-text-left">
+                        <div class="column is-half">
+                            <div class="control">
+                                <label for="hospitalDeReferencia" id="hospitalReferencia">*Hospital de Referência:</label>
+                                <input class="input input-fancy borda-arredondada" th:field="*{hospitalReferencia}" type="text" id="hospitalDeReferencia">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="columns has-text-left">
+                        <div class="column is-half">
+                            <div class="control">
+                                <label for="telefoneAssistente" id="telefoneAss">*Telefone:</label>
+                                <input class="input input-fancy borda-arredondada" th:field="*{telefone}" type="text" id="telefoneAssistente">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="columns has-text-left">
+                    <div class="column is-half">
+                        <label for="firstName">*Nome de usuário:</label>
+                        <input class="input input-fancy borda-arredondada" th:field="*{nome}" id="firstName" type="text" name="nome">
+                    </div>
+                </div>
+                <div class="columns has-text-left">
+                    <div class="column is-half">
+                        <label for="password">*Senha:</label>
+                        <input class="input input-fancy borda-arredondada" th:field="*{senha}" id="password" type="password" name="senha">
+                    </div>
+                </div>
+                <input class="button is-medium verde-viavida borda-arredondada" type="submit" value="Enviar">
+            </form>
         </div>
-        <h1 class="title titulo-h1">Formulário de Registro do Hospebem</h1>
-        <form th:action="@{/registrar}" th:object="${formUsuario}" method="post" onsubmit="return validaRegistrar(event)" id="registraAss">
-            <div th:if="${#fields.hasAnyErrors()}">
-                <p th:each="err : ${#fields.errors()}" th:text="${err}"></p>
-            </div>
-            <div class="columns has-text-left">
-                <div class = "column is-half">
-                    <div class = "control input-radio margin-invisible" id="labelCargo">
-                    <label th:field="*{cargo}">Tipo:</label>
-                    <input class="input-radio" th:id="${cargo}" th:each="cargo : ${cargos}" type="radio" name="cargo" th:value="${cargo}" th:text="${cargo.nome}">
-                </div>
-            </div>
-            </div>
-            <div class="display-none div-escondida">
-                <div class="columns has-text-left">
-                    <div class="column is-half">
-                        <div class="control">
-                            <label for="nomeAssistente">*Nome Completo:</label>
-                            <input class="input input-fancy borda-arredondada" th:field="*{nomeAssistente}" type="text" id="nomeAssistente">
-                        </div>
-                    </div>
-                </div>
-                <div class="columns has-text-left">
-                    <div class="column is-half">
-                        <div class="control">
-                            <label for="emailDaAssistente" id="emailAssistente">*E-mail:</label>
-                            <input class="input input-fancy borda-arredondada" th:field="*{email}" type="text" id="emailDaAssistente">
-                        </div>
-                    </div>
-                </div>
-                <div class="columns has-text-left">
-                    <div class="column is-half">
-                        <div class="control">
-                            <label for="hospitalDeReferencia" id="hospitalReferencia">*Hospital de Referência:</label>
-                            <input class="input input-fancy borda-arredondada" th:field="*{hospitalReferencia}" type="text" id="hospitalDeReferencia">
-                        </div>
-                    </div>
-                </div>
-                <div class="columns has-text-left">
-                    <div class="column is-half">
-                        <div class="control">
-                            <label for="telefoneAssistente" id="telefoneAss">*Telefone:</label>
-                            <input class="input input-fancy borda-arredondada" th:field="*{telefone}" type="text" id="telefoneAssistente">
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="columns has-text-left">
-                <div class="column is-half">
-                    <label for="firstName">*Nome de usuário:</label>
-                    <input class="input input-fancy borda-arredondada" th:field="*{nome}" id="firstName" type="text" name="nome">
-                </div>
-            </div>
-            <div class="columns has-text-left">
-                <div class="column is-half">
-                    <label for="password">*Senha:</label>
-                    <input class="input input-fancy borda-arredondada" th:field="*{senha}" id="password" type="password" name="senha">
-                </div>
-            </div>
-            <input class="button is-medium verde-viavida borda-arredondada" type="submit" value="Enviar">
-        </form>
     </div>
 </main>
 </body>
